--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-lg-3 text-center">
                 <img class="img-fluid" src="./resources/images/profile.png" alt="profile_image">
 
             </div>
-            <div class="col-9 about_me_container">
+            <div class="col-12 col-lg-9 about_me_container">
 
                 <h1 class="title_font">HELLO I'M</h1>
                 <div class="my_name">ZOE HO</div>
@@ -74,15 +74,15 @@
                 <div class="row">
                     <div class="col-12 col-md-4 project_box">
                         <div class="project_img" style="background-image: url('./resources/images/project_st.jpg')"></div>
-                        <div class="project_title">Company Website</div>
+                        <div class="project_title"><div>Company Website</div></div>
                     </div>
                     <div class="col-12 col-md-4 project_box">
                         <div class="project_img" style="background-image: url('./resources/images/project_2.jpg')"></div>
-                        <div class="project_title">Musician Website Design</div>
+                        <div class="project_title"><div>Musician Website Design</div></div>
                     </div>
                     <div class="col-12 col-md-4 project_box">
                         <div class="project_img" style="background-image: url('./resources/images/project_3.jpg')"></div>
-                        <div class="project_title">Procurement System</div>
+                        <div class="project_title"><div>Procurement System</div></div>
                     </div>
                 </div>
             </div>
@@ -110,6 +110,9 @@
             </div>
         </div>
     </div>
+    <div id="footer" class="mt-5 p-3">
+        <div>Thank you for visiting my site!</div>
+    </div>
 
 
 
@@ -122,7 +125,7 @@
             delay: 0,
             disableOnInteraction: false
         },
-        speed: 1000,
+        speed: 3000,
         slidesPerView: 4,
         loop: true,
         breakpoints: {
